@@ -183,11 +183,6 @@ of the ACE, TAO, and CIAO micro release kit is available for
   </TR>
 </TABLE>
 
-<P>
-  Patches between older micro release kit versions are available via FTP at
-  <A HREF="ftp://download.dre.vanderbilt.edu/diffs">this location</A>.
-</P>
-
 <LI> <B>Latest Release.</B> The latest release is ACE 5.8, TAO 1.8, and CIAO 0.8
 (ACE+TAO+CIAO x.8.0), please use the links below to download it.<P>
 
@@ -439,7 +434,7 @@ it you want to help us improve CIAO's autoconf support please contact
 <A
 HREF="mailto:d.schmidt@vanderbilt.edu">d.schmidt@vanderbilt.edu</A>.
 Naturally, if you run into problems with the use of autoconf in ACE
-and TAO please submit submit a <A
+and TAO please submit a <A
 HREF="http://www.dre.vanderbilt.edu/~schmidt/DOC_ROOT/ACE/docs/ACE-bug-process.html">bug
 report</A>.
 
