@@ -1,3 +1,8 @@
+Mon Jul  5 09:11:21 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * docs/Download.html:
+          Removed link to very old patches and fixed typo
+
 Mon Jul  5 09:05:43 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * docs/Download.html:
